CNV-53287: fix the alignment issue on Settings -> User

--- a/src/views/clusteroverview/SettingsTab/UserTab/user-tab.scss
+++ b/src/views/clusteroverview/SettingsTab/UserTab/user-tab.scss
@@ -1,6 +1,5 @@
 .permissions-tab {
   &--main {
-    width: 35vw;
     &__divider {
       margin: var(--pf-global--spacer--sm) 0 var(--pf-global--spacer--md) 0;
     }
